Featt(FSB3-2) : fix overflow
fixing overvlow on header mobile

--- a/style/style.css
+++ b/style/style.css
@@ -248,6 +248,8 @@ body {
   }
   .headerMob {
     display: block;
+    overflow: hidden;
+    width: 100vw;
   }
   .content {
     width: 100%;
